--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8" />
     <meta content="width=device-width, initial-scale=1" name="viewport" />
-    <meta name="description" content="Pagina simple para Congreso Dental Chihuahuense (CODEC)">
+    <meta name="description" content="Página simple para Congreso Dental Chihuahuense (CODEC)">
     <title>Congreso Dental Chihuahuense (CODEC)</title>
     <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css" />
     <link rel="stylesheet" type="text/css"
@@ -15,10 +15,6 @@
     <link rel="preload" href="styles/index.css" as="style">
     <link rel="stylesheet" href="styles/index.css">
     <style>
-        .alerta-form {
-            color: white;
-        }
-
         @media (min-width: 992px) {
             html.w-mod-js:not(.w-mod-ix) [data-w-id="7790c7f5-e606-0e16-7ece-290f34840e59"] {
                 opacity: 0;
@@ -218,7 +214,7 @@
                                         confirmar se le negará el acceso durante esa sección del evento. Si no sabe en
                                         qué
                                         consiste, puede consultar el <a class="" href="#agenda"
-                                            style="color: #fff;">Itinierario.</a></p>
+                                            style="color: #fff;">Itinerario.</a></p>
                                     <label class="radio mt-2" style="color: #fff;">
                                         <input name="asistencia_rompehielos" type="radio" value="si" checked>
                                         <span class="fs-6">Si</span>
@@ -498,14 +494,7 @@
                                         <h2 class="heading-style-h3">Descubre cómo la odontología no solo transforma
                                             sonrisas.</h2>
                                         <div class="margin-top margin-small">
-                                            <p class="text-size-medium">Este evento dental está diseñado para dentistas
-                                                generales, técnicos dentales y especialistas interesados en ampliar sus
-                                                conocimientos y mejorar la calidad de sus servicios. Contaremos con la
-                                                participación de destacados ponentes altamente capacitados, quienes
-                                                ofrecerán presentaciones y talleres especializados. El objetivo es
-                                                establecer un encuentro representativo para la comunidad dental en el
-                                                estado de Chihuahua, promoviendo el desarrollo profesional y la
-                                                excelencia en el área.</p>
+                                            <p class="text-size-medium">Este evento dental está diseñado para dentistas generales, técnicos dentales y especialistas interesados en ampliar sus conocimientos y mejorar la calidad de sus servicios. Contaremos con la participación de destacados ponentes altamente capacitados, quienes ofrecerán presentaciones y talleres especializados. El objetivo es establecer un encuentro representativo para la comunidad dental en el estado de Chihuahua, promoviendo el desarrollo profesional y la excelencia en el área.</p>
                                         </div>
 
 
@@ -872,7 +861,7 @@
                                                 <div class="speaker-content-wrapper">
                                                     <div class="heading-style-h4 title-dr">Dr. Néstor Schejtman Plotnik
                                                     </div>
-                                                    <div class="text-size-medium">Cirjuano Dentista</div>
+                                                    <div class="text-size-medium">Cirujano Dentista</div>
                                                     <div class="speaker-bio-content">
                                                         <p class="text-bio">Dr. Néstor Schejtman Plotnik es un
                                                             cirujano dentista especializado en prostodoncia, graduado de
@@ -1081,7 +1070,7 @@
                                 <div class="w-layout-grid agenda-component">
                                     <div class="agenda-title-wrapper">
                                         <div class="max-width-small">
-                                            <h2>Explora Nuestro Itinierario</h2>
+                                            <h2>Explora Nuestro Itinerario</h2>
                                         </div>
                                         <div class="agenda-background">
                                             <img src="assets/dentalid~165.webp" loading="lazy" alt="Agenda Image"
@@ -1113,8 +1102,7 @@
                                             <div id="w-node-_092b5cf7-288f-355b-4821-e2dbff1fb160-3863c98b"
                                                 class="agenda-content">
                                                 <div class="margin-bottom ">
-                                                    <h3>Tópicos en restauraciones adheridas directas e indirectas
-                                                        posteriores</h3>
+                                                    <h3>Tópicos en restauraciones adheridas directas e indirectas posteriores</h3>
                                                     <div id="arrow" class="mobile-notice">
                                                         &rarr;
                                                     </div>
@@ -1811,7 +1799,7 @@
                                                     lo antes posible si no puedes asistir. Sin embargo, ten en
                                                     cuenta
                                                     que todas las compras de boletos son finales y no ofrecemos
-                                                    reembolsos, cambios ni cancelaciones bajo ninguna circunstancia.
+                                                    reembolso, cambios ni cancelaciones bajo ninguna circunstancia.
                                                 </p>
                                             </div>
                                         </div>
@@ -1842,7 +1830,7 @@
                                 <div role="listitem" class="faq-collection-item w-dyn-item">
                                     <div class="faq-accordion">
                                         <div class="faq-question">
-                                            <div class="heading-style-h6">¿Venderan boletos el día del evento?</div>
+                                            <div class="heading-style-h6">¿Venderán boletos el día del evento?</div>
                                             <span class="icono-faq">+</span>
                                         </div>
                                         <div class="faq-answer">
@@ -1864,7 +1852,7 @@
                             <div>
                                 <h1>Compra tus Boletos</h1>
                                 <p>No te pierdas ser parte de esta experiencia de la cual te llevaras gran
-                                    conocimientode
+                                    conocimiento de
                                     expertos en la industria dental.</p>
                             </div>
 
@@ -1942,7 +1930,7 @@
                                 <div class="disclaimer">
                                     Gracias por visitar nuestra página web y por su interés en nuestros eventos. Nos
                                     gustaría informarle que todas las compras de boletos son finales. Una vez que se ha
-                                    completado la compra, no podemos ofrecer reembolsos, cambios ni cancelaciones bajo
+                                    completado la compra, no podemos ofrecer reembolso, cambios ni cancelaciones bajo
                                     ninguna circunstancia, lo cual incluye cambios de planes personales, conflictos de
                                     horario, problemas de transporte y condiciones meteorológicas. En el caso poco
                                     probable
