--- a/index.html
+++ b/index.html
@@ -448,7 +448,7 @@
                                                         <div>3 y 4 de Octubre 2024</div>
                                                     </div>
                                                     <div class="header-infos-item">
-                                                        <div>Centro de exposiciones y convenciones</div>
+                                                        <div>Centro de Exposiciones y Convenciones</div>
                                                     </div>
                                                     <div class="header-infos-item  no-border">
                                                         <div>Chihuahua, México</div>
