--- a/index.html
+++ b/index.html
@@ -1553,7 +1553,7 @@
         </div>
         <div class="popop-body rtf">
             <h3>Congreso Dental Chihuahuense</h3>
-            <p>Congreso Odontológico de Chihuahua invita a los estudiantes de Odontología de licenciatura y posgrado a participar en el Concurso de Carteles a celebrarse en los días 3 y 4 de Octubre 2024, durante el evento CODEC.</p>
+            <p>Congreso Dental Chihuahuense invita a los estudiantes de Odontología de licenciatura y posgrado a participar en el Concurso de Carteles a celebrarse en los días 3 y 4 de Octubre 2024, durante el evento CODEC.</p>
             <h3>REQUISITOS:</h3>
             <p>Los autores de los carteles deben estar inscritos en el Congreso. Podrán participar estudiantes de licenciatura y posgrado de Odontología, en cualquiera de sus especialidades, de todas las universidades del país y centros de educación profesional. Se podrán presentar carteles individualmente o en equipo, cada concursante podrá participar con un cartel por categoría, como máximo. Las categorías de los trabajos serán dos: Investigación y Casos clínicos. Las inscripciones de los trabajos se realizarán a partir de la publicación de esta convocatoria y hasta el 20 de septiembre del 2024. En la modalidad grupal deberá dar la exposición oral un solo vocal. Se recibirán todos los trabajos que se inscriban hasta el cierre de esta convocatoria, se revisarán por un comité evaluador y solamente pasarán a concurso los 20 trabajos que cumplan a cabalidad con los requisitos para contender. La exposición de trabajos se hará a partir del 3 de octubre y estarán en exhibición durante el congreso. Se nombrarán y premiarán a los ganadores el 4 de octubre al cierre del evento.</p>
             <h3>INSCRIPCIÓN:</h3>
