--- a/index.html
+++ b/index.html
@@ -1552,9 +1552,7 @@
                     <p class="m-0">Invitamos a todos los estudiantes a participar en nuestro emocionante evento de
                         carteles. </p>
                     <p class="pb-3">Este es tu momento para mostrar tu creatividad y talento.</p>
-                    <a style="    background-color: white;
-                    border-radius: 20px;
-                    padding: 10px;" href="" id="openPopop">Conoce las bases para participar</a>
+                    <a href="" id="openPopop">Conoce las bases para participar</a>
                 </div>
 
                 <div id="popop" class="popop">
