--- a/index.html
+++ b/index.html
@@ -282,6 +282,7 @@
                         document.addEventListener('DOMContentLoaded', function () {
                             const ticketOptions = document.querySelectorAll('input[name="ticket-type"]');
                             const cartesEventDiv = document.getElementById('cartes-event');
+                 
                             
                             ticketOptions.forEach(option => {
                                 option.addEventListener('click', function () {
@@ -2387,7 +2388,7 @@
         crossorigin="anonymous"></script>
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js"></script>
-    <script src="./scripts/pagos.js"></script>
+    <script src="./scripts/checkout.js"></script>
     <script src="./scripts/boletos.js"></script>
 </body>
 
