Cambio al nombre

--- a/index.html
+++ b/index.html
@@ -254,7 +254,7 @@
                                 </div>
                                  <!-- Opción de participación en evento de cartes -->
                                  <div id="cartes-event" style="display: none;">
-                                     <p class="form-label fs-6 mt-2 text-align-start">¿Confirma su participación en el evento de cartes?
+                                     <p class="form-label fs-6 mt-2 text-align-start">¿Confirma su participación en el evento de carteless?
                                     </p>
                                     <label class="radio mt-2" style="color: #fff;">
                                         <input name="asistencia_cartes" type="radio" value="si">
