--- a/index.html
+++ b/index.html
@@ -296,7 +296,7 @@
                         </div>
                         <!-- Botón para volver atrás -->
                         <div class="d-flex justify-content-start mb-3">
-                            <button type="button" class="btn btn-link" id="volverBtn">
+                            <button type="button" class="btn btn-link text-align-start" id="volverBtn">
                                 &larr; Volver
                             </button>
                         </div>
