--- a/index.html
+++ b/index.html
@@ -289,6 +289,15 @@
                 </section>
 
                 <!-- Sección de Pago -->
+                <style>
+                    button {
+                        box-shadow: none;
+                    }
+
+                    .modal-content {
+                        border: none;
+                    }
+                </style>
                 <section id="pago-section" class="section hidden">
                     <div class="modal-content" style="min-width: fit-content;">
                         <div class="modal-header">
