--- a/index.html
+++ b/index.html
@@ -2411,6 +2411,7 @@
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js"></script>
     <script src="./scripts/checkout.js"></script>
     <script src="./scripts/boletos.js"></script>
+    <script src="./scripts/redirects.js"></script>
 </body>
 
 </html>
