Cambiar nombre boleto

--- a/index.html
+++ b/index.html
@@ -230,11 +230,11 @@
                                             <span class="ticket-text">General</span>
                                             <span class="ticket-price">2000 MXN</span>
                                         </div>
-                                    </label>
+                                    </label>   
                                     <label class="ticket-option">
-                                        <input type="radio" name="ticket-type" value="instituto" />
+                                        <input type="radio" name="ticket-type" value="Colegios e Instituciones" />
                                         <div class="ticket-content">
-                                            <span class="ticket-text">Instituto</span>
+                                            <span class="ticket-text">Colegios e Instituciones</span>
                                             <span class="ticket-price">1500 MXN</span>
                                         </div>
                                     </label>
@@ -2423,7 +2423,7 @@
         crossorigin="anonymous"></script>
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js"></script>
-    <script src="./scripts/checkout.js"></script>
+    <script src="./scripts/pagos.js"></script>
     <script src="./scripts/boletos.js"></script>
 </body>
 
