Agregar texto rompe hielo

--- a/index.html
+++ b/index.html
@@ -595,7 +595,7 @@
                                                     <img src="assets/check.png" loading="lazy" alt="Check Icon"
                                                         class="icon-1x1-small" />
                                                     <div class="highlight-content">
-                                                        <p class="text-size-medium text-uppercase">Fiesta Rompe Hielo *
+                                                        <p class="text-size-medium text-uppercase">Fiesta Rompe Hielo * (Evento con Costo)
                                                         </p>
                                                     </div>
                                                 </div>
@@ -1305,7 +1305,7 @@
                                             <div id="w-node-e76cb932-36d5-1daa-65da-f00d3ca37b0d-3863c98b"
                                                 class="agenda-content">
                                                 <div class="margin-bottom ">
-                                                    <h3>Fiesta Rompe Hielos *</h3>
+                                                    <h3>Fiesta Rompe Hielos * (Evento con Costo)</h3>
                                                     <div id="arrow" class="mobile-notice">
                                                         &rarr;
                                                     </div>
