--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
                                 </div>
                                 <div>
                                     <p class="form-label fs-6 mt-2 text-align-start">¿Confirma su asistencia al evento
-                                        rompehielos dentro del itinerario? Es muy importante saber si asistirá, ya que
+                                        rompehielos (evento con costo) dentro del itinerario? Es muy importante saber si asistirá, ya que
                                         de no
                                         confirmar se le negará el acceso durante esa sección del evento. Si no sabe en
                                         qué
