--- a/index.html
+++ b/index.html
@@ -1182,7 +1182,7 @@
                                             <div id="w-node-e34d5b91-3aba-9615-b8b6-6bf9c5b3e11a-3863c98b"
                                                 class="agenda-content2">
                                                 <div class="margin-bottom ">
-                                                    <h3>Registro</h3>
+                                                    <h3>Inicio de Registro</h3>
                                                 </div>
                                             </div>
                                         </div>
@@ -1215,7 +1215,7 @@
                                             <div id="w-node-e43f4d9d-549f-2a50-8a36-32b01124765e-3863c98b"
                                                 class="agenda-content2">
                                                 <div class="margin-bottom ">
-                                                    <h3>Receso / Carteles</h3>
+                                                    <h3>Receso</h3>
                                                 </div>
                                             </div>
                                         </div>
@@ -1253,7 +1253,7 @@
                                             <div id="w-node-d17faf61-0b41-190f-fc7b-8c8bf949ca1c-3863c98b"
                                                 class="agenda-content2">
                                                 <div class="margin-bottom ">
-                                                    <h3>Comida</h3>
+                                                    <h3>Horario de Comida</h3>
                                                 </div>
                                             </div>
                                         </div>
@@ -1272,7 +1272,7 @@
                                                 </div>
                                             </div>
                                             <div class="additional-info">
-                                                <p><span class="conferencista-titulo">Conferencista: </span> Dr.
+                                                <p><span class="conferencista-titulo">Conferencista: </span> TPD
                                                     Leonardo
                                                     Vogel</p>
                                                 <p>La comunicación con tu laboratorio es la base de las restauraciones
@@ -1288,7 +1288,7 @@
                                             <div id="w-node-_7b699b8b-95d7-42bd-c521-b9c1d63011af-3863c98b"
                                                 class="agenda-content2">
                                                 <div class="margin-bottom ">
-                                                    <h3>Rifa Colgate</h3>
+                                                    <h3>Receso / Rifa</h3>
                                                 </div>
                                             </div>
                                         </div>
@@ -1300,7 +1300,8 @@
                                             <div id="w-node-_49babfcc-9d07-d8c3-63f5-1107f8f9a7ef-3863c98b"
                                                 class="agenda-content">
                                                 <div class="margin-bottom ">
-                                                    <h3>Restauraciones Bio-miméticas en el Segmento Anterior</h3>
+                                                    <h3>Restauraciones biomimeticas en el
+                                                        segmento anterior</h3>
                                                     <div id="arrow" class="mobile-notice">
                                                         &rarr;
                                                     </div>
@@ -1308,8 +1309,7 @@
                                             </div>
                                             <div class="additional-info">
                                                 <p><span class="conferencista-titulo">Conferencista: </span>Dr.
-                                                    Floriberto
-                                                    Calixto Arellanos</p>
+                                                    Tonali Vasquez</p>
                                                 <p>Hoy en día las exigencias estéticas del paciente presentan estándares
                                                     altos, te ayudará a comprender cómo emular lo natural y aumentar la
                                                     belleza en tus restauraciones de segmento anterior.</p>
@@ -1325,7 +1325,7 @@
                                             <div id="w-node-e76cb932-36d5-1daa-65da-f00d3ca37b0d-3863c98b"
                                                 class="agenda-content">
                                                 <div class="margin-bottom ">
-                                                    <h3>Fiesta Rompe Hielos * (Evento con Costo)</h3>
+                                                    <h3>Rodeo Rompe Hielos * (Evento con Costo)</h3>
                                                     <div id="arrow" class="mobile-notice">
                                                         &rarr;
                                                     </div>
@@ -1399,7 +1399,7 @@
                                             <div id="w-node-d17faf61-0b41-190f-fc7b-8c8bf949ca1c-3863c98b"
                                                 class="agenda-content2">
                                                 <div class="margin-bottom ">
-                                                    <h3>Comida</h3>
+                                                    <h3>Horario de Comida</h3>
                                                 </div>
                                             </div>
                                         </div>
@@ -1435,7 +1435,7 @@
                                             <div id="w-node-_7b699b8b-95d7-42bd-c521-b9c1d63011af-3863c98b"
                                                 class="agenda-content2">
                                                 <div class="margin-bottom ">
-                                                    <h3>Receso / Carteles</h3>
+                                                    <h3>Receso / Rifa</h3>
                                                 </div>
                                             </div>
                                         </div>
@@ -1471,7 +1471,7 @@
                                             <div id="w-node-_7b699b8b-95d7-42bd-c521-b9c1d63011af-3863c98b"
                                                 class="agenda-content2">
                                                 <div class="margin-bottom ">
-                                                    <h3 id="location">Clausura / Decisión de Jurado de Carteles</h3>
+                                                    <h3 id="location">Cierre / Rifa</h3>
                                                 </div>
                                             </div>
                                         </div>
