--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
     <meta content="width=device-width, initial-scale=1" name="viewport" />
     <meta name="description" content="Página simple para Congreso Dental Chihuahuense (CODEC)">
     <title>Congreso Dental Chihuahuense (CODEC)</title>
-    <!-- <script>
+    <script>
         if (window.location.protocol !== "https:" || window.location.hostname !== "www.codecuu.com") {
             window.location.href = "https://www.codecuu.com" + window.location.pathname + window.location.search;
         }
-    </script> -->
+    </script>
     <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css" />
     <link rel="stylesheet" type="text/css"
         href="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick-theme.css" />
