--- a/index.html
+++ b/index.html
@@ -1078,7 +1078,7 @@
                                                 </div>
                                                 <div class="speaker-content-wrapper">
                                                     <div class="heading-style-h4 title-dr">Dr. Cristian Reyna</div>
-                                                    <div class="text-size-medium">Técnico Dental</div>
+                                                    <div class="text-size-medium">Cirujano Dentista</div>
                                                     <div class="speaker-bio-content">
                                                         <p class="text-bio">
                                                             Dr. Christian Reyna Juárez es un destacado cirujano
