--- a/index.html
+++ b/index.html
@@ -22,6 +22,9 @@
         'https://connect.facebook.net/en_US/fbevents.js');
         fbq('init', '517790750792734');
         fbq('track', 'PageView');
+        fbq('track', 'Lead');
+        fbq('track', 'InitiateCheckout');
+        fbq('track', 'CompleteRegistration');
         </script>
         <noscript><img height="1" width="1" style="display:none"
         src="https://www.facebook.com/tr?id=517790750792734&ev=PageView&noscript=1"
